--- a/ui/src/main/res/values/attrs.xml
+++ b/ui/src/main/res/values/attrs.xml
@@ -61,7 +61,7 @@
     </declare-styleable>
 
     <declare-styleable name="LoaderButton">
-        <attr name="acq_text" />
+        <attr name="acq_text" format="reference" />
         <attr name="acq_text_color" format="color" />
         <attr name="acq_background" format="reference" />
         <attr name="acq_progress_color" format="color" />
